added swagger annotation
